plugin_LTLIBRARIES = 1080to480.la
1080to480_la_LDFLAGS = -avoid-version -module -shared
1080to480_la_LIBADD =
1080to480_la_SOURCES = 1080to480.C
AM_CFLAGS =
AM_CXXFLAGS =

INCLUDES = -I$(top_srcdir)/guicast -I$(top_srcdir)/cinelerra -I$(top_srcdir)/quicktime
LIBTOOL = $(SHELL) $(top_builddir)/libtool $(LTCXX_FLAGS)
