plugin_LTLIBRARIES = 720to480.la
720to480_la_LDFLAGS = -avoid-version -module -shared
720to480_la_LIBADD =
720to480_la_SOURCES = 720to480.C
AM_CXXFLAGS = $(LARGEFILE_CFLAGS)

INCLUDES = -I$(top_srcdir)/guicast -I$(top_srcdir)/cinelerra -I$(top_srcdir)/quicktime
LIBTOOL = $(SHELL) $(top_builddir)/libtool $(LTCXX_FLAGS)

noinst_HEADERS = 720to480.h 
