plugin_LTLIBRARIES = burn.la
burn_la_LDFLAGS = -avoid-version -module -shared 
burn_la_LIBADD = $(top_srcdir)/plugins/libeffecttv/libeffecttv.la
burn_la_SOURCES = burn.C burnwindow.C
AM_CFLAGS = 
AM_CXXFLAGS = 

INCLUDES = -I$(top_srcdir)/guicast -I$(top_srcdir)/cinelerra -I$(top_srcdir)/quicktime -I$(top_srcdir)/plugins/libeffecttv
