plugin_LTLIBRARIES = chromakey.la
chromakey_la_LDFLAGS = -avoid-version -module -shared 
chromakey_la_LIBADD = $(top_srcdir)/plugins/colors/libcolors.la
chromakey_la_SOURCES = chromakey.C 
AM_CFLAGS = 
AM_CXXFLAGS = 

INCLUDES = -I$(top_srcdir)/guicast -I$(top_srcdir)/cinelerra -I$(top_srcdir)/quicktime -I$(top_srcdir)/plugins/colors
